# metadata_crawl

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  SRA_메타데이터_수집_보고서.md  changelog.md  docker-compose.yml  environment.yml  pyproject.toml  report.md  requirements.txt  troubleshoot.md  제목없음.md
scripts/: collect_geo.py  download_sra.py
src/: __init__.py  config.py  pipeline.py
src/db/: __init__.py  models.py  schema.py  writer.py
src/downloaders/: __init__.py  ftp_downloader.py  http_downloader.py
src/linkers/: __init__.py  id_mapper.py
src/parsers/: __init__.py  geo_miniml_parser.py  geo_soft_parser.py  sra_xml_parser.py
src/qc/: __init__.py  reporter.py
tests/: conftest.py  test_db.py  test_downloaders.py  test_linkers.py  test_parsers.py  test_pipeline.py
