[project]
name = "metadata-crawl"
version = "0.1.0"
description = "GEO & SRA metadata bulk collection pipeline"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
